# mati-test-rust

./: Cargo.toml
migrations/: 20250426130558_init.down.sql  20250426130558_init.up.sql  20250426130606_create_subscriptions_table.down.sql  20250426130606_create_subscriptions_table.up.sql
src/: config.rs  lib.rs  log.rs  main.rs  settings.rs  startup.rs
src/routes/: subscriptions.rs
tests/: test_app.rs
