[package]
name = "mati-test-rust"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "mati-test-rust"

[dependencies]
actix-web = "4.10.2"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
config = "0.15.11"
dotenvy = "0.15.7"
uuid = { version = "1.16.0", features = ["v4"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
secrecy = { version = "0.10.3", features = ["serde"] }
tracing-actix-web = "0.7.18"

[dev-dependencies]
once_cell = "1.21.3"
reqwest = "0.12.15"
rstest = "0.25.0"
testcontainers-modules = { version = "0.11.6", features = ["postgres"] }
